fix im IE wurde GFI wegen Overflow-y (css) nicht korrekt dargestellt.

--- a/modules/gfipopup/popup/style.css
+++ b/modules/gfipopup/popup/style.css
@@ -81,6 +81,7 @@
     font-size: 12px;
     max-height: 40vh;
     overflow-y: auto;
+    width: 100%;
 }
 
 .gfi-content > table {
